--- a/XiaomiParts/res/values/strings.xml
+++ b/XiaomiParts/res/values/strings.xml
@@ -14,15 +14,60 @@
      limitations under the License.
 -->
 <resources>
-    <string name="summary_empty" translatable="false"></string>
-    <string name="app_name">Xiaomi</string>
-    <string name="advanced_settings">Advanced</string>
+    <string name="app_name">XiaomiParts</string>
+    <string name="advanced_settings">XiaomiParts</string>
+    <string name="advanced_settings_summary">Additional device specific settings</string>
     <string name="category_vibrator">Vibrator</string>
-    <string name="vib_strength_title_head">Strength</string>
-    <string name="vib_strength_summary_head">Define the strength of the vibrator</string>
+    <string name="vib_strength_title_head">Strength of the vibrator</string>
     <string name="category_torch">Torch</string>
     <string name="yellow_torch_brightness_title_head">Yellow led maximum brightness</string>
-    <string name="yellow_torch_brightness_summary_head">Define the maximum brightness of the yellow led</string>
     <string name="white_torch_brightness_title_head">White led maximum brightness</string>
-    <string name="white_torch_brightness_summary_head">Define the maximum brightness of the white led</string>
+    <string name="touchscreen_title">Touchscreen</string>
+    <string name="glove_mode_title">Glove Mode</string>
+    <string name="glove_mode_summary">Increase touch sensitivity (May decrease battery life)</string>
+    <string name="graphics_title">Graphics</string>
+    <string name="kcal_title">Display color</string>
+    <string name="kcal_summary">Display color calibration using KCAL</string>
+    <string name="kcal_enabled_title">Enable KCAL</string>
+    <string name="kcal_enabled_summary">Turn on display calibration using KCAL</string>
+    <string name="kcal_red">Red</string>
+    <string name="kcal_green">Green</string>
+    <string name="kcal_blue">Blue</string>
+    <string name="kcal_saturation">Saturation</string>
+    <string name="kcal_contrast">Constrast</string>
+    <string name="kcal_value">Value</string>
+    <string name="kcal_hue">Hue</string>
+    <string name="kcal_invert_title">Invert</string>
+    <string name="kcal_invert_summary">Invert all screen colors</string>
+    <string name="kcal_greyscale_title">Greyscale</string>
+    <string name="kcal_greyscale_summary">Fully disable saturation</string>
+    <string name="menu_reset">Reset</string>
+    <string name="presets_list_title">Load KCAL preset</string>
+    <string name="default_values">Default</string>
+    <string name="version_1">Version 1</string>
+    <string name="version_2">Version 2</string>
+    <string name="version_3">Version 3</string>
+    <string name="triluminous">Triluminous</string>
+    <string name="deep_black_and_white">Deep Black and White</string>
+    <string name="deep_natural">Deep Natural</string>
+    <string name="cool_amoled">Cool Amoled</string>
+    <string name="extreme_amoled">Extreme Amoled</string>
+    <string name="warm_amoled">Warm Amoled</string>
+    <string name="hybrid_mamba">Hybrid Mamba</string>
+
+    <!-- Spectrum Profiles -->
+    <string name="spectrum_profile_title">Spectrum</string>
+    <string name="spectrum_title">Profile</string>
+    <string name="spectrum_dialogTitle">Choose your spectrum profile</string>
+
+    <!-- usb fastcharge -->
+    <string name="usb_fastcharge_title">USB Fastcharge</string>
+    <string name="fastcharge_title">Enable USB Fastcharge</string>
+    <string name="fastcharge_summary">Use fastcharge when connected to a computer via usb port</string>
+
+    <!-- wakeup fix -->
+    <string name="category_wakeup">Fingerprint</string>
+    <string name="slow_wakeup_fix_title">Improve wakeup speed</string>
+    <string name="slow_wakeup_fix_summary">Disabled by default as it drains battery!!!</string>
+    
 </resources>
